# artwork

./: .gitignore  LICENSE.TXT  Makefile.am  README.md  autogen.sh  configure.ac  meson.build
backgrounds/: Makefile.am  evolve-os-wallpapers.xml.in  meson.build  solus-wallpapers-mate.xml.in  solus-wallpapers.xml.in
icons/: Makefile.am  meson.build
scripts/: mkrelease.sh
