AC_INIT([Evolve OS Artwork], 3, [ikey@evolve-os.com], [evolveos-artwork], [https://evolve-os.com/])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects])
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_FILES([Makefile
                backgrounds/Makefile
                backgrounds/evolve-os-wallpapers.xml])
AC_OUTPUT
