AC_INIT([Solus Artwork], 8, [ikey@solus-project.com], [solus-artwork], [https://solus-project.com/])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects])
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_FILES([Makefile
                backgrounds/Makefile
                backgrounds/solus-wallpapers.xml
                icons/Makefile])
AC_OUTPUT
