artworkdir = $(datadir)/backgrounds/solus

artwork_DATA = \
		SolusFresh.png \
		HermiteCrab1920x1080.jpg \
		HermiteCrab2560x1600.jpg \
		book.jpeg \
		chalk.jpeg \
		BogFlower.jpg \
		BrittasLake.jpg \
		IMG_0597-solus.JPG \
		IMG_0604-solus.JPG \
		IMG_0605-solus.JPG \
		IMG_0608-solus.JPG \
		IMG_0609-solus.JPG \
		Mama.jpg \
		Path.jpg \
		TulipBee.jpg

backgroundpropsdir = $(datadir)/gnome-background-properties
backgroundprops_DATA = \
		solus-wallpapers.xml

EXTRA_DIST = \
	$(artwork_DATA) \
	solus-wallpapers.xml.in
