artworkdir = $(datadir)/backgrounds/solus

artwork_DATA = \
		SolusFresh.png \
		HermiteCrab1920x1080.jpg \
		HermiteCrab2560x1600.jpg \
		book.png \
		chalk.jpeg \
		BogFlower.jpg \
		BrittasLake.jpg \
		DeepBlue-II.png \
		DeepBlue-II-Circles.png \
		DeepBlue-II-Green.png \
		DeepBlue-II-Material.png \
		DeepBlue-II-Original.png \
		DeepBlue-II-Pink.png \
		IMG_0597-solus.JPG \
		IMG_0604-solus.JPG \
		IMG_0605-solus.JPG \
		IMG_0608-solus.JPG \
		IMG_0609-solus.JPG \
		Mama.jpg \
		Path.jpg \
		TulipBee.jpg \
		ShannonClonmacnoise.jpg \
		Athlone-Shannon-1920x1080.png \
		Solus-2016-abstract1-1920x1080.jpg \
		Solus-2016UltraBlur-1920x1080.jpg

backgroundpropsdir = $(datadir)/gnome-background-properties
backgroundprops_DATA = \
		solus-wallpapers.xml

EXTRA_DIST = \
	$(artwork_DATA) \
	solus-wallpapers.xml.in
