artworkdir = $(datadir)/backgrounds/solus

artwork_DATA = \
		Crags.png \
		Twigonometry.jpg \
		SolusFresh.png \
		LegendaryBarrels.jpg \
		Excl_Autumn_Leaf.jpg \
		Excl_Lazy_Summer_Leaf.jpg \
		Excl_Lonely_Railway.jpg \
		Excl_Focal_Leaf.jpg \
		Excl_Focal_Spring.jpg \
		Excl_Vintage_Bicycles.jpg \
		Excl_Autumn_Retreat.jpg \
		PubSide.jpg \
		TullamoreGrandCanal.jpg \
		HermiteCrab2560x1600.jpg \
		book.png \
		chalk.jpeg \
		BogFlower.jpg \
		BrittasLake.jpg \
		IMG_0597-solus.JPG \
		IMG_0604-solus.JPG \
		IMG_0608-solus.JPG \
		IMG_0609-solus.JPG \
		Mama.jpg \
		Path.jpg \
		TulipBee.jpg \
		ShannonClonmacnoise.jpg \
		Athlone-Shannon-1920x1080.png \
		Solus-2016-abstract1-1920x1080.jpg \
		Solus-2016UltraBlur-1920x1080.jpg

backgroundpropsdir = $(datadir)/gnome-background-properties
backgroundprops_DATA = \
		solus-wallpapers.xml

mate_backgroundpropsdir = $(datadir)/mate-background-properties
mate_backgroundprops_DATA = \
		solus-wallpapers-mate.xml

EXTRA_DIST = 					 \
	$(artwork_DATA)				 \
	solus-wallpapers.xml.in		 \
	solus-wallpapers-mate.xml.in
