EXTRA_DIST = 									\
	16x16/distributor-logo-solus.png 			\
	16x16/start-here-solus.png 					\
	16x16/application-x-evolveos-package.png 	\
	24x24/distributor-logo-solus.png 			\
	24x24/start-here-solus.png 					\
	24x24/application-x-evolveos-package.png 	\
	32x32/distributor-logo-solus.png 			\
	32x32/start-here-solus.png 					\
	32x32/application-x-evolveos-package.png 	\
	48x48/distributor-logo-solus.png 			\
	48x48/start-here-solus.png 					\
	48x48/application-x-evolveos-package.png 	\
	64x64/distributor-logo-solus.png 			\
	64x64/start-here-solus.png 					\
	64x64/application-x-evolveos-package.png 	\
	96x96/distributor-logo-solus.png 			\
	96x96/start-here-solus.png 					\
	96x96/application-x-evolveos-package.png 	\
	256x256/distributor-logo-solus.png 			\
	256x256/start-here-solus.png 				\
	256x256/application-x-evolveos-package.png  \
	512x512/distributor-logo-solus.png 			\
	512x512/start-here-solus.png 				\
	512x512/application-x-evolveos-package.png 	\
	scalable/distributor-logo-solus.svg 		\
	scalable/start-here-solus.svg				\
	scalable/application-x-evolveos-package.svg

16iconsdir = $(datadir)/icons/hicolor/16x16/places
16icons_DATA = 									\
	16x16/distributor-logo-solus.png 			\
	16x16/start-here-solus.png

24iconsdir = $(datadir)/icons/hicolor/24x24/places
24icons_DATA = 									\
	24x24/distributor-logo-solus.png 			\
	24x24/start-here-solus.png

32iconsdir = $(datadir)/icons/hicolor/32x32/places
32icons_DATA = 									\
	32x32/distributor-logo-solus.png 			\
	32x32/start-here-solus.png
48iconsdir = $(datadir)/icons/hicolor/48x48/places
48icons_DATA = 									\
	48x48/distributor-logo-solus.png 			\
	48x48/start-here-solus.png

64iconsdir = $(datadir)/icons/hicolor/64x64/places
64icons_DATA = 									\
	64x64/distributor-logo-solus.png 			\
	64x64/start-here-solus.png

96iconsdir = $(datadir)/icons/hicolor/96x96/places
96icons_DATA = 									\
	96x96/distributor-logo-solus.png			\
	96x96/start-here-solus.png

256iconsdir = $(datadir)/icons/hicolor/256x256/places
256icons_DATA = 								\
	256x256/distributor-logo-solus.png 			\
	256x256/start-here-solus.png

512iconsdir = $(datadir)/icons/hicolor/512x512/places
512icons_DATA = 								\
	512x512/distributor-logo-solus.png 			\
	512x512/start-here-solus.png

scaleiconsdir = $(datadir)/icons/hicolor/scalable/places
scaleicons_DATA = 								\
	scalable/distributor-logo-solus.svg			\
	scalable/start-here-solus.svg



mime16iconsdir = $(datadir)/icons/hicolor/16x16/mimetypes
mime16icons_DATA = 									\
	16x16/application-x-evolveos-package.png

mime24iconsdir = $(datadir)/icons/hicolor/24x24/mimetypes
mime24icons_DATA = 									\
	24x24/application-x-evolveos-package.png

mime32iconsdir = $(datadir)/icons/hicolor/32x32/mimetypes
mime32icons_DATA = 									\
	32x32/application-x-evolveos-package.png

mime48iconsdir = $(datadir)/icons/hicolor/48x48/mimetypes
mime48icons_DATA = 									\
	48x48/application-x-evolveos-package.png

mime64iconsdir = $(datadir)/icons/hicolor/64x64/mimetypes
mime64icons_DATA = 									\
	64x64/application-x-evolveos-package.png

mime96iconsdir = $(datadir)/icons/hicolor/96x96/mimetypes
mime96icons_DATA = 									\
	96x96/application-x-evolveos-package.png

mime256iconsdir = $(datadir)/icons/hicolor/256x256/mimetypes
mime256icons_DATA = 								\
	256x256/application-x-evolveos-package.png

mime512iconsdir = $(datadir)/icons/hicolor/512x512/mimetypes
mime512icons_DATA = 								\
	512x512/application-x-evolveos-package.png

mimescaleiconsdir = $(datadir)/icons/hicolor/scalable/mimetypes
mimescaleicons_DATA = 								\
	scalable/application-x-evolveos-package.svg
